--- a/src/layouts/MainLayout/index.scss
+++ b/src/layouts/MainLayout/index.scss
@@ -1,6 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap");
-article,
-article img,
+﻿@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap");
+
+article {
+  display: block;
+
+  img {
+    display: block;
+  }
+}
 footer,
 header,
 iframe,
@@ -9,10 +15,12 @@ nav,
 section {
   display: block;
 }
-.page-permalink.center-vert,
-.page-permalink.webkit-flex {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
+.page-permalink {
+  &.center-vert,
+  &.webkit-flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+  }
 }
 * {
   margin: 0;
@@ -34,20 +42,24 @@ img {
   max-width: 100%;
   margin: 0 auto;
 }
-
 /*tumblr system*/
-.has-google-fonts .head-title,
-.has-google-fonts .header-desc {
-  font-family: Cormorant Garamond, sans-serif;
+
+.has-google-fonts {
+  .head-title,
+  .header-desc {
+    font-family: Cormorant Garamond, sans-serif;
+  }
 }
 img.avatar,
 ol.notes,
 svg.hidden {
   display: none;
 }
-.post__footer li,
-.post__footer ul {
-  display: inline;
+.post__footer {
+  li,
+  ul {
+    display: inline;
+  }
 }
 .metadata,
 .social {
@@ -96,23 +108,31 @@ a:not(.nav-item) {
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
-.post__footer .custom-like-button {
-  position: relative;
-}
-.post__footer .like_button:hover + .like_text {
-  opacity: 1;
-}
-.post__footer .like_button.liked + .like_text,
-.post__footer .like_text--liked {
-  display: none;
-}
-.post__footer .like_button + .like_text + .like_text--liked {
-  display: none;
-  opacity: 0;
-}
-.post__footer .like_button.liked + .like_text + .like_text--liked {
-  display: block;
-  opacity: 1;
+.post__footer {
+  .custom-like-button {
+    position: relative;
+  }
+  .like_button {
+    &:hover + .like_text {
+      opacity: 1;
+    }
+    &.liked + .like_text {
+      display: none;
+    }
+  }
+  .like_text--liked {
+    display: none;
+  }
+  .like_button {
+    + .like_text + .like_text--liked {
+      display: none;
+      opacity: 0;
+    }
+    &.liked + .like_text + .like_text--liked {
+      display: block;
+      opacity: 1;
+    }
+  }
 }
 .icon-heart:hover {
   opacity: 1;
@@ -121,33 +141,35 @@ a:not(.nav-item) {
   opacity: 0;
 }
 /*infinityScroll system*/
+
 #infscr-loading {
   margin: auto;
   text-align: center;
 }
 /*1*/
-body,
-html {
+
+body {
   height: 100%;
 }
 html {
+  height: 100%;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
+
   /*scroll-behavior: smooth;*/
   font-size: 1rem;
 }
-
 body {
   position: relative;
   line-height: 1.5em;
   -webkit-font-smoothing: antialiased;
-  font-family: "Baskerville Old Face", Baskerville, "Times New Roman", Times,
-    serif, Georgia, Palatino, "Palatino Linotype", "HGS明朝E",
-    "ヒラギノ明朝 Pro W3", "Hiragino Mincho Pro", "ＭＳ Ｐ明朝",
-    "Times New Roman", "游明朝", YuMincho, "ヒラギノ明朝 ProN W3",
-    "Hiragino Mincho ProN", "ＭＳ Ｐ明朝", "MS PMincho", serif; /*明朝*/
+  font-family: "Baskerville Old Face", Baskerville, "Times New Roman", Times, serif, Georgia, Palatino, "Palatino Linotype", "HGS明朝E", "ヒラギノ明朝 Pro W3", "Hiragino Mincho Pro", "ＭＳ Ｐ明朝", "Times New Roman", "游明朝", YuMincho, "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "ＭＳ Ｐ明朝", "MS PMincho", serif;
+
+  /*明朝*/
 }
+
 /*2*/
+
 h1,
 h2,
 h3 {
@@ -173,11 +195,11 @@ a#tumblr_lightbox_center_link {
 .SNS-link a {
   opacity: 0.618;
 }
-a:hover {
-  opacity: 1;
-  color: #222;
-}
 a {
+  &:hover {
+    opacity: 1;
+    color: #222;
+  }
   text-decoration: none;
 }
 .avatar-style-circle .user-avatar {
@@ -191,18 +213,23 @@ a {
   opacity: 0;
   padding: 25px 0;
   transition: all 0.2s;
+
+  &.fade-in {
+    opacity: 1;
+  }
 }
-.wrapper.fade-in {
-  opacity: 1;
-}
-.container,
-.container-l {
+.container {
   max-width: 560px;
   margin: 0 auto;
 }
-.container-l.feature-has-large-images {
-  max-width: 100%;
-  text-align: center;
+.container-l {
+  max-width: 560px;
+  margin: 0 auto;
+
+  &.feature-has-large-images {
+    max-width: 100%;
+    text-align: center;
+  }
 }
 #pagination a,
 .blog-title-wrapper,
@@ -232,10 +259,11 @@ h1.title a {
   -webkit-transition: opacity 0.2s ease-in;
   -ms-transition: opacity 0.2s ease-in;
   transition: opacity 0.2s ease-in;
-}
-.load-wrapper.hidden {
-  opacity: 0;
-  pointer-events: none;
+
+  &.hidden {
+    opacity: 0;
+    pointer-events: none;
+  }
 }
 .header-overlay {
   position: fixed;
@@ -262,24 +290,26 @@ nav li:first-child {
   text-align: center;
   padding: 0 0 100px;
 }
-.page-permalink nav.header {
-  display: none;
-}
-.page-permalink.center-vert {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  display: -webkit-flex;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-justify-content: center;
-}
-.page-permalink.webkit-flex {
-  -ms-flex-direction: column;
-  flex-direction: column;
+.page-permalink {
+  nav.header {
+    display: none;
+  }
+  &.center-vert {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    display: -webkit-flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+  &.webkit-flex {
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
 }
 .blog-title-wrapper {
   position: absolute;
@@ -291,26 +321,30 @@ nav li:first-child {
 }
 span.label {
   font-weight: 700;
+
+  + p {
+    display: inline;
+  }
 }
-span.label + p {
-  display: inline;
-}
-.page-permalink #content {
-  padding: 100px 1.618vh;
-  display: flex;
-  display: -webkit-flex;
-  -webkit-justify-content: center;
-  justify-content: center;
-}
-.page-permalink #content.block {
-  display: block;
-}
-.page-permalink .wrapper.margin {
-  margin: 0;
-}
-.page-permalink.page-photoset {
-  -webkit-flex-direction: initial;
-  flex-direction: initial;
+.page-permalink {
+  #content {
+    padding: 100px 1.618vh;
+    display: flex;
+    display: -webkit-flex;
+    -webkit-justify-content: center;
+    justify-content: center;
+
+    &.block {
+      display: block;
+    }
+  }
+  .wrapper.margin {
+    margin: 0;
+  }
+  &.page-photoset {
+    -webkit-flex-direction: initial;
+    flex-direction: initial;
+  }
 }
 .photoset {
   margin: 0 auto;
@@ -319,11 +353,13 @@ span.label + p {
   display: flex;
   display: -webkit-flex;
 }
-.page-index #content {
-  padding-bottom: 160px;
-}
-.page-index article:last-of-type {
-  margin-bottom: 0;
+.page-index {
+  #content {
+    padding-bottom: 160px;
+  }
+  article:last-of-type {
+    margin-bottom: 0;
+  }
 }
 p > a {
   word-break: break-all;
@@ -332,22 +368,24 @@ p > a {
   width: auto;
   max-width: 100%;
 }
-.post__footer li,
-.post__footer ul {
-  line-height: 1.5;
+.post__footer {
+  li,
+  ul {
+    line-height: 1.5;
+  }
 }
-
 .page-index .video-player {
   position: relative;
   height: 0;
   padding-bottom: 56.2857%;
-}
-.page-index .video-player iframe {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
+
+  iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+  }
 }
 iframe[id^="like_iframe"] {
   position: absolute;
@@ -358,7 +396,6 @@ iframe[id^="like_iframe"] {
   top: 50%;
   left: 0;
 }
-
 .photoset .container-l.feature-has-large-images {
   max-width: 700px;
 }
@@ -374,56 +411,19 @@ h1.title a {
   font-size: small;
   line-height: 1.8em;
   letter-spacing: 0.6px;
+
+  .head-wrap {
+    display: none;
+  }
 }
-.page-permalink .head-wrap {
-  display: none;
-}
-.grade1 {
-  /*https://www.cssmatic.com/gradient-generator#'\-moz\-linear\-gradient\%28top\%2C\%20rgba\%28245\%2C245\%2C245\%2C1\%29\%200\%25\%2C\%20rgba\%28237\%2C251\%2C255\%2C1\%29\%2016\%25\%2C\%20rgba\%28237\%2C245\%2C247\%2C1\%29\%2024\%25\%2C\%20rgba\%28255\%2C255\%2C255\%2C1\%29\%20100\%25\%29\%3B'*/
+.grade1 {  /*https://www.cssmatic.com/gradient-generator#'\-moz\-linear\-gradient\%28top\%2C\%20rgba\%28245\%2C245\%2C245\%2C1\%29\%200\%25\%2C\%20rgba\%28237\%2C251\%2C255\%2C1\%29\%2016\%25\%2C\%20rgba\%28237\%2C245\%2C247\%2C1\%29\%2024\%25\%2C\%20rgba\%28255\%2C255\%2C255\%2C1\%29\%20100\%25\%29\%3B'*/
   background: rgba(245, 245, 245, 1);
-  background: -moz-linear-gradient(
-    top,
-    rgba(245, 245, 245, 1) 0%,
-    rgba(237, 251, 255, 1) 16%,
-    rgba(237, 245, 247, 1) 24%,
-    rgba(255, 255, 255, 1) 100%
-  );
-  background: -webkit-gradient(
-    left top,
-    left bottom,
-    color-stop(0%, rgba(245, 245, 245, 1)),
-    color-stop(16%, rgba(237, 251, 255, 1)),
-    color-stop(24%, rgba(237, 245, 247, 1)),
-    color-stop(100%, rgba(255, 255, 255, 1))
-  );
-  background: -webkit-linear-gradient(
-    top,
-    rgba(245, 245, 245, 1) 0%,
-    rgba(237, 251, 255, 1) 16%,
-    rgba(237, 245, 247, 1) 24%,
-    rgba(255, 255, 255, 1) 100%
-  );
-  background: -o-linear-gradient(
-    top,
-    rgba(245, 245, 245, 1) 0%,
-    rgba(237, 251, 255, 1) 16%,
-    rgba(237, 245, 247, 1) 24%,
-    rgba(255, 255, 255, 1) 100%
-  );
-  background: -ms-linear-gradient(
-    top,
-    rgba(245, 245, 245, 1) 0%,
-    rgba(237, 251, 255, 1) 16%,
-    rgba(237, 245, 247, 1) 24%,
-    rgba(255, 255, 255, 1) 100%
-  );
-  background: linear-gradient(
-    to bottom,
-    rgba(245, 245, 245, 1) 0%,
-    rgba(237, 251, 255, 1) 16%,
-    rgba(237, 245, 247, 1) 24%,
-    rgba(255, 255, 255, 1) 100%
-  );
+  background: -moz-linear-gradient(top, rgba(245, 245, 245, 1) 0%, rgba(237, 251, 255, 1) 16%, rgba(237, 245, 247, 1) 24%, rgba(255, 255, 255, 1) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(245, 245, 245, 1)), color-stop(16%, rgba(237, 251, 255, 1)), color-stop(24%, rgba(237, 245, 247, 1)), color-stop(100%, rgba(255, 255, 255, 1)));
+  background: -webkit-linear-gradient(top, rgba(245, 245, 245, 1) 0%, rgba(237, 251, 255, 1) 16%, rgba(237, 245, 247, 1) 24%, rgba(255, 255, 255, 1) 100%);
+  background: -o-linear-gradient(top, rgba(245, 245, 245, 1) 0%, rgba(237, 251, 255, 1) 16%, rgba(237, 245, 247, 1) 24%, rgba(255, 255, 255, 1) 100%);
+  background: -ms-linear-gradient(top, rgba(245, 245, 245, 1) 0%, rgba(237, 251, 255, 1) 16%, rgba(237, 245, 247, 1) 24%, rgba(255, 255, 255, 1) 100%);
+  background: linear-gradient(to bottom, rgba(245, 245, 245, 1) 0%, rgba(237, 251, 255, 1) 16%, rgba(237, 245, 247, 1) 24%, rgba(255, 255, 255, 1) 100%);
 }
 .head-wrap {
   top: 0;
@@ -432,31 +432,30 @@ h1.title a {
 }
 .container-l {
   min-height: 20vh;
-  background: linear-gradient(
-    to bottom,
-    rgba(245, 245, 245, 1) 0%,
-    rgba(255, 255, 255, 1) 100%
-  );
-  /* overflow-x: scroll; */
-}
-.photoset .container-l {
-  display: inline-flex;
-  align-items: center;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  justify-content: space-around;
-}
-.photoset img {
-  flex-basis: 25%;
-  width: 25%;
+  background: linear-gradient(to bottom, rgba(245, 245, 245, 1) 0%, rgba(255, 255, 255, 1) 100%);
 
-  flex-shrink: 2;
-  flex-grow: 2;
-
-  margin: 0 0 1em;
+  /* overflow-x: scroll;*/
 }
-.photoset img:last-child {
-  display: block !important;
+
+.photoset {
+  .container-l {
+    display: inline-flex;
+    align-items: center;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    justify-content: space-around;
+  }
+  img {
+    flex-basis: 25%;
+    width: 25%;
+    flex-shrink: 2;
+    flex-grow: 2;
+    margin: 0 0 1em;
+
+    &:last-child {
+      display: block !important;
+    }
+  }
 }
 @keyframes wave {
   0% {
@@ -472,6 +471,7 @@ h1.title a {
     transform: matrix(1, 0, 0, 1, 0, -70);
   }
 }
+
 @keyframes sunk {
   0% {
     transform: translate(0, -3em);
@@ -486,6 +486,7 @@ h1.title a {
     opacity: 1;
   }
 }
+
 @keyframes sunk-short {
   0% {
     transform: translate(0, -1em);
@@ -498,9 +499,12 @@ h1.title a {
     transform: translate(0, 0);
     opacity: 1;
   }
-}
+};
+
 /*index only*/
-body.page-index .index-img {
+
+
+.index-img {
   height: 38vh;
   width: 100%;
   background-image: url(https://static.tumblr.com/y9oo5wl/ThPox0ei0/surface.gif);
@@ -512,38 +516,41 @@ body.page-index .index-img {
   transform: matrix(1, 0, 0, 0.9, 0, 20);
   animation: wave 180s 0s linear forwards;
 }
-body.page-index .sunk {
+.sunk {
   animation: sunk 30s 0.3s ease-out forwards;
   transform: translate(0px, -3em);
   opacity: 0;
 }
-body.page-index .sunk-short {
+.sunk-short {
   animation: sunk-short 3s 0.3s ease-out forwards;
   transform: translate(0px, -10em);
   opacity: 0;
 }
 .header-desc {
   font-size: 0.82rem;
+
+  a {
+    margin: 0 0.2em;
+    letter-spacing: 0.15em;
+    line-height: 2.92em;
+  }
 }
-.header-desc a {
-  margin: 0 0.2em;
-  letter-spacing: 0.15em;
-  line-height: 2.92em;
-}
-body.page-index #content {
-  height: 100%;
-}
-body.page-index article {
-  min-height: 92vh;
-  vertical-align: middle;
-  padding: 0 2.618vw;
-  display: flex;
-  flex-flow: column wrap;
-  justify-content: center;
-  align-items: center;
-  align-content: space-between;
-  text-align: left;
-  margin-bottom: 1.618vh;
+body.page-index {
+  #content {
+    height: 100%;
+  }
+  article {
+    min-height: 92vh;
+    vertical-align: middle;
+    padding: 0 2.618vw;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: space-between;
+    text-align: left;
+    margin-bottom: 1.618vh;
+  }
 }
 .post__footer {
   margin-top: 0em;
@@ -569,47 +576,58 @@ iframe {
     max-width: auto;
   }
 }
-.page-index .container,
-.post__footer,
-.post__footer a {
+
+.page-index .container {
   font-size: 14px;
   line-height: 1.8em;
+}
+.post__footer {
+  font-size: 14px;
+  line-height: 1.8em;
+
+  a {
+    font-size: 14px;
+    line-height: 1.8em;
+  }
 }
 .container-l,
 iframe {
   margin-bottom: 0.618em;
 }
 .container,
-.container-l,
-footer {
+.container-l {
   max-width: 1200px;
 }
 footer {
+  max-width: 1200px;
   margin: auto;
 }
 section > footer {
   margin-top: 30vh;
 }
 /*win*/
+
 .win {
   font-size: 1em;
 }
 /* @group モバイル*/
-.mobile .wrapper {
-  padding: 50px 0;
-}
-.mobile img {
-  max-width: 100%;
-}
-.mobile body.page-index article {
-  width: 100%;
-  min-height: 61.8vh;
-  margin-bottom: 0vh;
-}
-.mobile article > div {
-  width: 100%;
-}
-/*.mobile .index-img {*/
+
+.mobile {
+  .wrapper {
+    padding: 50px 0;
+  }
+  img {
+    max-width: 100%;
+  }
+  body.page-index article {
+    width: 100%;
+    min-height: 61.8vh;
+    margin-bottom: 0vh;
+  }
+  article > div {
+    width: 100%;
+  }
+}/*.mobile .index-img {*/
 /*    background-size:auto 50%;*/
 /*    height: 28vh;*/
 /*}*/
