--- a/src/index.scss
+++ b/src/index.scss
@@ -2,10 +2,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 body {
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.38),
     0 2px 0 rgba(255, 124, 0, 0.16);
   letter-spacing: 0.05em;
+}
+
+body {
+  position: relative;
+  line-height: 1.5em;
+  -webkit-font-smoothing: antialiased;
+  font-family: 'Baskerville Old Face', Baskerville, 'Times New Roman', Times,
+    serif, Georgia, Palatino, 'Palatino Linotype', 'HGS明朝E',
+    'ヒラギノ明朝 Pro W3', 'Hiragino Mincho Pro', 'ＭＳ Ｐ明朝',
+    'Times New Roman', '游明朝', YuMincho, 'ヒラギノ明朝 ProN W3',
+    'Hiragino Mincho ProN', 'ＭＳ Ｐ明朝', 'MS PMincho', serif;
+
+  /*明朝*/
 }
 body,
 a {
