--- a/src/layouts/MainLayout/index.scss
+++ b/src/layouts/MainLayout/index.scss
@@ -159,18 +159,6 @@ html {
   /*scroll-behavior: smooth;*/
   font-size: 1rem;
 }
-body {
-  position: relative;
-  line-height: 1.5em;
-  -webkit-font-smoothing: antialiased;
-  font-family: 'Baskerville Old Face', Baskerville, 'Times New Roman', Times,
-    serif, Georgia, Palatino, 'Palatino Linotype', 'HGS明朝E',
-    'ヒラギノ明朝 Pro W3', 'Hiragino Mincho Pro', 'ＭＳ Ｐ明朝',
-    'Times New Roman', '游明朝', YuMincho, 'ヒラギノ明朝 ProN W3',
-    'Hiragino Mincho ProN', 'ＭＳ Ｐ明朝', 'MS PMincho', serif;
-
-  /*明朝*/
-}
 
 /*2*/
 
@@ -586,7 +574,7 @@ body.page-index {
     min-height: 92vh;
     vertical-align: middle;
     padding: 0 2.618vw;
-    display: flex;
+    display: block;
     flex-flow: column wrap;
     justify-content: center;
     align-items: center;
