--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-﻿/* ./src/index.css */
+﻿@charset "UTF-8";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -18,34 +18,32 @@ body {
     'ヒラギノ明朝 Pro W3', 'Hiragino Mincho Pro', 'ＭＳ Ｐ明朝',
     'Times New Roman', '游明朝', YuMincho, 'ヒラギノ明朝 ProN W3',
     'Hiragino Mincho ProN', 'ＭＳ Ｐ明朝', 'MS PMincho', serif;
-
   /*明朝*/
 }
+
 body,
 a {
   color: #797979;
 }
+
 /*a{color: #333;}*/
-html.win {
-}
-html.mac,
-html.safari,
-html.mac.chrome {
-}
 html.gecko,
 html.android {
   font-size: 0.85em;
 }
+
 .Eng {
   line-height: 1.4em;
   letter-spacing: 1px;
 }
+
 .Jpn {
   letter-spacing: 0px;
   font-size: small;
   line-height: 1.6em;
   letter-spacing: 0.1px;
 }
+
 .handwriting {
   font-style: italic;
   font-family: 'Monsieur La Doulaise', cursive;
@@ -57,16 +55,19 @@ STATIC {
   color: white;
   background-color: lime;
 }
+
 form,
 form * {
   margin: 0;
   padding: 0;
   display: inline;
 }
+
 img,
 a img {
   border: 0;
 }
+
 a {
   text-decoration: none;
   z-index: 99999;
@@ -76,21 +77,23 @@ a {
 a:active {
   opacity: 1 important;
 }
+
 ol,
 p {
   padding: 0px;
   margin: 0px;
 }
+
 li {
   list-style-type: none;
 }
 
 /*ショートカット*/
-
 .px1618p {
   font-size: 161.8%;
   line-height: 1em;
 }
+
 /*レイアウト*/
 .after:after {
   height: 0;
@@ -117,18 +120,21 @@ li {
   padding: 0;
   border: 0;
 }
+
 .w382 {
   width: 36.2%;
   margin: auto 1%;
   padding: 0;
   border: 0;
 }
+
 .w100 {
   width: 100%;
   margin: auto 0;
   padding: 0;
   border: 0;
 }
+
 .w711 {
   width: 711px;
   margin: auto 0;
@@ -141,41 +147,53 @@ li {
   padding: 0 !important;
   border: 0 !important;
 }
+
 p.br {
   height: 1em;
 }
+
 .br3 {
   border-radius: 3px;
 }
+
 /*色*/
 .cb {
   color: #000 !important;
 }
+
 .cw,
 .cfff {
   color: #fff !important;
 }
+
 .cb1 {
   color: #553 !important;
 }
+
 .c333 {
   color: #333 !important;
 }
+
 .c666 {
   color: #666 !important;
 }
+
 .c999 {
   color: #999 !important;
 }
+
 .cccc {
   color: #ccc !important;
 }
+
 .bgf0 {
   background-color: #f0f0f0 !important;
 }
+
 .bg000 {
   background-color: #000;
 }
+
 .bgfff {
   background-color: #fff !important;
 }
@@ -185,29 +203,36 @@ p.br {
   font-family: 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo,
     メイリオ, 'ＭＳ ゴシック', 'MS Gothic', sans-serif;
 }
+
 .meiryo {
   font-family: Meiryo, メイリオ, 'Hiragino Kaku Gothic ProN',
     'ヒラギノ角ゴ ProN W3', 'ＭＳ ゴシック', 'MS Gothic', sans-serif;
 }
+
 .mincho {
   font-family: 'HGS明朝E', 'ヒラギノ明朝 Pro W3', 'Hiragino Mincho Pro',
     'ＭＳ Ｐ明朝', serif;
 }
+
 .mincho_num {
   font-family: 'HGS明朝E', 'ヒラギノ明朝 Pro W3', 'Hiragino Mincho Pro',
     'ＭＳ Ｐ明朝', serif;
 }
+
 .font-outline {
   text-shadow: 0 1px 1px black, 0 -1px 1px black, 1px 0 1px black,
     -1px 0 1px black;
 }
+
 .font-outline-w {
   text-shadow: 0 1px 1px white, 0 -1px 1px white, 1px 0 1px black,
     -1px 0 1px white;
 }
+
 .font-anaglyph {
   text-shadow: -0.06em 0 red, 0.06em 0 cyan;
 }
+
 .font-emboss {
   text-shadow: 0px 1px 1px white, 0 -1px 1px black;
 }
