--- a/src/layouts/MainLayout/index.css
+++ b/src/layouts/MainLayout/index.css
@@ -1,4 +1,9 @@
-﻿@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap');
+﻿@charset "UTF-8";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap');
 
 footer,
 header,
@@ -8,58 +13,62 @@ nav,
 section {
   display: block;
 }
-.page-permalink {
-  &.center-vert,
-  &.webkit-flex {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-  }
+
+.page-permalink.center-vert,
+.page-permalink.webkit-flex {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
 }
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 audio,
 video {
   display: inline-block;
 }
+
 audio:not([controls]) {
   display: none;
   height: 0;
 }
+
 iframe {
   width: 100%;
 }
+
 img {
   max-width: 100%;
   margin: 0 auto;
 }
-/*tumblr system*/
 
-.has-google-fonts {
-  .head-title,
-  .header-desc {
-    font-family: Cormorant Garamond, sans-serif;
-  }
+/*tumblr system*/
+.has-google-fonts .head-title,
+.has-google-fonts .header-desc {
+  font-family: Cormorant Garamond, sans-serif;
 }
+
 img.avatar,
 ol.notes,
 svg.hidden {
   display: none;
 }
-.post__footer {
-  li,
-  ul {
-    display: inline;
-  }
+
+.post__footer li,
+.post__footer ul {
+  display: inline;
 }
+
 .metadata,
 .social {
   margin: 0.278em 0;
   line-height: 19px;
   line-height: 1.056;
 }
+
 .like_button {
   position: absolute;
   top: 0;
@@ -71,17 +80,21 @@ svg.hidden {
   opacity: 0;
   z-index: 10;
 }
+
 div.custom-like-button {
   position: relative;
 }
+
 li.custom-like-button {
   display: inline-block;
 }
+
 ol.notes {
   position: absolute;
   padding: 0 0 50px;
   max-width: 100%;
 }
+
 body.has-center-text ol.notes {
   left: 50%;
   -webkit-transform: translateX(-50%);
@@ -89,153 +102,172 @@ body.has-center-text ol.notes {
   transform: translateX(-50%);
   width: 100%;
 }
+
 .icon-heart,
 .like_text {
   opacity: 0.5;
 }
+
 .like_button:hover + .like_text {
   opacity: 1;
 }
+
 .icon-heart,
 a:not(.nav-item) {
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
-.post__footer {
-  .custom-like-button {
-    position: relative;
-  }
-  .like_button {
-    &:hover + .like_text {
-      opacity: 1;
-    }
-    &.liked + .like_text {
-      display: none;
-    }
-  }
-  .like_text--liked {
-    display: none;
-  }
-  .like_button {
-    + .like_text + .like_text--liked {
-      display: none;
-      opacity: 0;
-    }
-    &.liked + .like_text + .like_text--liked {
-      display: block;
-      opacity: 1;
-    }
-  }
+
+.post__footer .custom-like-button {
+  position: relative;
 }
+
+.post__footer .like_button:hover + .like_text {
+  opacity: 1;
+}
+
+.post__footer .like_button.liked + .like_text {
+  display: none;
+}
+
+.post__footer .like_text--liked {
+  display: none;
+}
+
+.post__footer .like_button + .like_text + .like_text--liked {
+  display: none;
+  opacity: 0;
+}
+
+.post__footer .like_button.liked + .like_text + .like_text--liked {
+  display: block;
+  opacity: 1;
+}
+
 .icon-heart:hover {
   opacity: 1;
 }
+
 .tmblr-iframe.tmblr-iframe--sticky-ad {
   opacity: 0;
 }
-/*infinityScroll system*/
 
+/*infinityScroll system*/
 #infscr-loading {
   margin: auto;
   text-align: center;
 }
-/*1*/
 
+/*1*/
 body {
   height: 100%;
 }
+
 html {
   height: 100%;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
-
   /*scroll-behavior: smooth;*/
   font-size: 1rem;
 }
 
 /*2*/
-
 h1,
 h2,
 h3 {
   font-weight: 400;
 }
+
 svg:not(:root) {
   overflow: hidden;
 }
+
 body.has-center-text {
   text-align: center;
 }
+
 .head-title {
   margin: 30px 0 0;
 }
+
 .user-avatar,
 .wrapper {
   margin: 0 auto;
 }
+
 .head-title > a,
 a#tumblr_lightbox_center_link {
   opacity: 1;
 }
-.SNS-link {
-  a {
-    margin: 0 0.5em;
-    letter-spacing: 0.1em;
-  }
+
+.SNS-link a {
+  margin: 0 0.5em;
+  letter-spacing: 0.1em;
 }
+
 a {
-  &:hover {
-    opacity: 1;
-    color: #222;
-  }
   text-decoration: none;
 }
+
+a:hover {
+  opacity: 1;
+  color: #222;
+}
+
 .avatar-style-circle .user-avatar {
   border-radius: 50%;
 }
+
 .container-l > a {
   display: inline-block;
   opacity: 1;
 }
+
 .wrapper {
   opacity: 0;
   padding: 25px 0;
   transition: all 0.2s;
-
-  &.fade-in {
-    opacity: 1;
-  }
 }
+
+.wrapper.fade-in {
+  opacity: 1;
+}
+
 .container {
   max-width: 560px;
   margin: 0 auto;
 }
+
 .container-l {
   max-width: 560px;
   margin: 0 auto;
-
-  &.feature-has-large-images {
-    max-width: 100%;
-    text-align: center;
-  }
 }
+
+.container-l.feature-has-large-images {
+  max-width: 100%;
+  text-align: center;
+}
+
 #pagination a,
 .blog-title-wrapper,
 h1.title a {
   font-size: 21px;
 }
+
 .head-title,
 .header-avatar,
 .header-desc {
   width: 100%;
   text-align: center;
 }
+
 .head-title,
 .header-avatar,
 .header-desc,
 .logo.svg {
   position: relative;
 }
+
 .load-wrapper {
   top: 0;
   right: 0;
@@ -247,12 +279,13 @@ h1.title a {
   -webkit-transition: opacity 0.2s ease-in;
   -ms-transition: opacity 0.2s ease-in;
   transition: opacity 0.2s ease-in;
-
-  &.hidden {
-    opacity: 0;
-    pointer-events: none;
-  }
 }
+
+.load-wrapper.hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
 .header-overlay {
   position: fixed;
   top: 50%;
@@ -263,118 +296,132 @@ h1.title a {
   transform: translate(-50%, -50%);
   z-index: 9999;
 }
+
 .photoset_row {
   margin: 0 auto !important;
 }
+
 li {
   list-style: none;
   margin: 0 0.556em 0 0;
 }
+
 .post__footer ul:first-child li:first-child,
 nav li:first-child {
   margin-left: 0;
 }
+
 #pagination > ul {
   text-align: center;
   padding: 0 0 100px;
 }
-.page-permalink {
-  nav.header {
-    display: none;
-  }
-  &.center-vert {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    display: -webkit-flex;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-justify-content: center;
-  }
-  &.webkit-flex {
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
+
+.page-permalink nav.header {
+  display: none;
 }
+
+.page-permalink.center-vert {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  display: -webkit-flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+
+.page-permalink.webkit-flex {
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
 .blog-title-wrapper {
   position: absolute;
   top: 2em;
   left: 0.618em;
 }
+
 #content {
   margin: 3em 0 0;
 }
+
 span.label {
   font-weight: 700;
-
-  + p {
-    display: inline;
-  }
 }
-.page-permalink {
-  #content {
-    padding: 100px 1.618vh;
-    display: flex;
-    display: -webkit-flex;
-    -webkit-justify-content: center;
-    justify-content: center;
 
-    &.block {
-      display: block;
-    }
-  }
-  .wrapper.margin {
-    margin: 0;
-  }
-  &.page-photoset {
-    -webkit-flex-direction: initial;
-    flex-direction: initial;
-  }
+span.label + p {
+  display: inline;
 }
+
+.page-permalink #content {
+  padding: 100px 1.618vh;
+  display: flex;
+  display: -webkit-flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+
+.page-permalink #content.block {
+  display: block;
+}
+
+.page-permalink .wrapper.margin {
+  margin: 0;
+}
+
+.page-permalink.page-photoset {
+  -webkit-flex-direction: initial;
+  flex-direction: initial;
+}
+
 .photoset {
   margin: 0 auto;
 }
+
 .page-permalink {
   display: flex;
   display: -webkit-flex;
 }
-.page-index {
-  #content {
-    padding-bottom: 160px;
-  }
-  article:last-of-type {
-    margin-bottom: 0;
-  }
+
+.page-index #content {
+  padding-bottom: 160px;
 }
+
+.page-index article:last-of-type {
+  margin-bottom: 0;
+}
+
 p > a {
   word-break: break-all;
 }
+
 .container-l.feature-has-large-images img {
   width: auto;
   max-width: 100%;
 }
-.post__footer {
-  li,
-  ul {
-    line-height: 1.5;
-  }
+
+.post__footer li,
+.post__footer ul {
+  line-height: 1.5;
 }
+
 .page-index .video-player {
   position: relative;
   height: 0;
   padding-bottom: 56.2857%;
-
-  iframe {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-  }
 }
+
+.page-index .video-player iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
+
 iframe[id^='like_iframe'] {
   position: absolute;
   width: 100%;
@@ -384,6 +431,7 @@ iframe[id^='like_iframe'] {
   top: 50%;
   left: 0;
 }
+
 .photoset .container-l.feature-has-large-images {
   max-width: 700px;
 }
@@ -391,110 +439,111 @@ iframe[id^='like_iframe'] {
 h1.title a {
   line-height: 2em;
 }
+
 .page-permalink {
   display: flex;
   display: -webkit-flex;
   font-size: small;
   line-height: 1.8em;
   letter-spacing: 0.6px;
-
-  .head-wrap {
-    display: none;
-  }
 }
+
+.page-permalink .head-wrap {
+  display: none;
+}
+
 .grade1 {
   /*https://www.cssmatic.com/gradient-generator#'\-moz\-linear\-gradient\%28top\%2C\%20rgba\%28245\%2C245\%2C245\%2C1\%29\%200\%25\%2C\%20rgba\%28237\%2C251\%2C255\%2C1\%29\%2016\%25\%2C\%20rgba\%28237\%2C245\%2C247\%2C1\%29\%2024\%25\%2C\%20rgba\%28255\%2C255\%2C255\%2C1\%29\%20100\%25\%29\%3B'*/
-  background: rgba(245, 245, 245, 1);
+  background: whitesmoke;
   background: -moz-linear-gradient(
     top,
-    rgba(245, 245, 245, 1) 0%,
-    rgba(237, 251, 255, 1) 16%,
-    rgba(237, 245, 247, 1) 24%,
-    rgba(255, 255, 255, 1) 100%
+    whitesmoke 0%,
+    #edfbff 16%,
+    #edf5f7 24%,
+    white 100%
   );
   background: -webkit-gradient(
     left top,
     left bottom,
-    color-stop(0%, rgba(245, 245, 245, 1)),
-    color-stop(16%, rgba(237, 251, 255, 1)),
-    color-stop(24%, rgba(237, 245, 247, 1)),
-    color-stop(100%, rgba(255, 255, 255, 1))
+    color-stop(0%, whitesmoke),
+    color-stop(16%, #edfbff),
+    color-stop(24%, #edf5f7),
+    color-stop(100%, white)
   );
   background: -webkit-linear-gradient(
     top,
-    rgba(245, 245, 245, 1) 0%,
-    rgba(237, 251, 255, 1) 16%,
-    rgba(237, 245, 247, 1) 24%,
-    rgba(255, 255, 255, 1) 100%
+    whitesmoke 0%,
+    #edfbff 16%,
+    #edf5f7 24%,
+    white 100%
   );
   background: -o-linear-gradient(
     top,
-    rgba(245, 245, 245, 1) 0%,
-    rgba(237, 251, 255, 1) 16%,
-    rgba(237, 245, 247, 1) 24%,
-    rgba(255, 255, 255, 1) 100%
+    whitesmoke 0%,
+    #edfbff 16%,
+    #edf5f7 24%,
+    white 100%
   );
   background: -ms-linear-gradient(
     top,
-    rgba(245, 245, 245, 1) 0%,
-    rgba(237, 251, 255, 1) 16%,
-    rgba(237, 245, 247, 1) 24%,
-    rgba(255, 255, 255, 1) 100%
+    whitesmoke 0%,
+    #edfbff 16%,
+    #edf5f7 24%,
+    white 100%
   );
   background: linear-gradient(
     to bottom,
-    rgba(245, 245, 245, 1) 0%,
-    rgba(237, 251, 255, 1) 16%,
-    rgba(237, 245, 247, 1) 24%,
-    rgba(255, 255, 255, 1) 100%
+    whitesmoke 0%,
+    #edfbff 16%,
+    #edf5f7 24%,
+    white 100%
   );
 }
+
 .head-wrap {
   top: 0;
-  // height: 61.8vh;
   width: 100%;
 }
+
 .container-l {
   min-height: 20vh;
-  background: linear-gradient(
-    to bottom,
-    rgba(245, 245, 245, 1) 0%,
-    rgba(255, 255, 255, 1) 100%
-  );
-
+  background: linear-gradient(to bottom, whitesmoke 0%, white 100%);
   /* overflow-x: scroll;*/
 }
 
-.photoset {
-  .container-l {
-    display: inline-flex;
-    align-items: center;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    justify-content: space-around;
-  }
-  img {
-    flex-basis: 25%;
-    width: 25%;
-    flex-shrink: 2;
-    flex-grow: 2;
-    margin: 0 0 1em;
-
-    &:last-child {
-      display: block !important;
-    }
-  }
+.photoset .container-l {
+  display: inline-flex;
+  align-items: center;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: space-around;
 }
+
+.photoset img {
+  flex-basis: 25%;
+  width: 25%;
+  flex-shrink: 2;
+  flex-grow: 2;
+  margin: 0 0 1em;
+}
+
+.photoset img:last-child {
+  display: block !important;
+}
+
 @keyframes wave {
   0% {
     transform: matrix(1, 0, 0, 0.7, 0, 10);
   }
+
   10% {
     transform: matrix(1, 0, 0, 1, 0, 0);
   }
+
   30% {
     transform: matrix(1, 0, 0, 0.8, 0, -10);
   }
+
   100% {
     transform: matrix(1, 0, 0, 1, 0, -70);
   }
@@ -505,10 +554,12 @@ h1.title a {
     transform: translate(0, -3em);
     opacity: 0;
   }
+
   1% {
     transform: translate(0, -1em);
     opacity: 0.618;
   }
+
   100% {
     transform: translate(0, 0em);
     opacity: 1;
@@ -520,9 +571,11 @@ h1.title a {
     transform: translate(0, -1em);
     opacity: 0;
   }
+
   10% {
     opacity: 0;
   }
+
   100% {
     transform: translate(0, 0);
     opacity: 1;
@@ -530,7 +583,6 @@ h1.title a {
 }
 
 /*index only*/
-
 .index-img {
   height: 38vh;
   width: 100%;
@@ -543,47 +595,53 @@ h1.title a {
   transform: matrix(1, 0, 0, 0.9, 0, 20);
   animation: wave 180s 0s linear forwards;
 }
+
 .sunk {
   animation: sunk 30s 0.3s ease-out forwards;
   transform: translate(0px, -3em);
   opacity: 0;
 }
+
 .sunk-short {
   animation: sunk-short 3s 0.3s ease-out forwards;
   transform: translate(0px, -10em);
   opacity: 0;
 }
+
 header {
   font-size: 0.82rem;
+}
 
-  nav {
-    font-size: 1rem;
-  }
-  a {
-    margin: 0 0.2em;
-    letter-spacing: 0.15em;
-    line-height: 2.92em;
-  }
+header nav {
+  font-size: 1rem;
 }
-body.page-index {
-  #content {
-    height: 100%;
-  }
-  article {
-    min-height: 92vh;
-    vertical-align: middle;
-    padding: 0 2.618vw;
-    flex-flow: column wrap;
-    justify-content: center;
-    align-items: center;
-    align-content: space-between;
-    text-align: left;
-    margin-bottom: 1.618vh;
-  }
+
+header a {
+  margin: 0 0.2em;
+  letter-spacing: 0.15em;
+  line-height: 2.92em;
 }
+
+body.page-index #content {
+  height: 100%;
+}
+
+body.page-index article {
+  min-height: 92vh;
+  vertical-align: middle;
+  padding: 0 2.618vw;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: space-between;
+  text-align: left;
+  margin-bottom: 1.618vh;
+}
+
 .post__footer {
   margin-top: 0em;
 }
+
 .head-title {
   margin: 0;
   font-size: 1.618em;
@@ -591,16 +649,19 @@ body.page-index {
   letter-spacing: 0.2em;
   color: #555;
 }
+
 img,
 iframe {
   max-width: 100%;
 }
+
 @media only screen and (max-width: 767px) {
   body.page-index .container,
   .post__footer,
   ol.notes {
     padding: 0 0.618vw;
   }
+
   img {
     max-width: auto;
   }
@@ -610,53 +671,61 @@ iframe {
   font-size: 14px;
   line-height: 1.8em;
 }
+
 .post__footer {
   font-size: 14px;
   line-height: 1.8em;
-
-  a {
-    font-size: 14px;
-    line-height: 1.8em;
-  }
 }
+
+.post__footer a {
+  font-size: 14px;
+  line-height: 1.8em;
+}
+
 .container-l,
 iframe {
   margin-bottom: 0.618em;
 }
+
 .container,
 .container-l {
   max-width: 1200px;
 }
+
 footer {
   max-width: 1200px;
   margin: auto;
 }
+
 section > footer {
   margin-top: 30vh;
 }
-/*win*/
 
+/*win*/
 .win {
   font-size: 1em;
 }
-/* @group モバイル*/
 
-.mobile {
-  .wrapper {
-    padding: 50px 0;
-  }
-  img {
-    max-width: 100%;
-  }
-  body.page-index article {
-    width: 100%;
-    min-height: 61.8vh;
-    margin-bottom: 0vh;
-  }
-  article > div {
-    width: 100%;
-  }
-} /*.mobile .index-img {*/
+/* @group モバイル*/
+.mobile .wrapper {
+  padding: 50px 0;
+}
+
+.mobile img {
+  max-width: 100%;
+}
+
+.mobile body.page-index article {
+  width: 100%;
+  min-height: 61.8vh;
+  margin-bottom: 0vh;
+}
+
+.mobile article > div {
+  width: 100%;
+}
+
+/*.mobile .index-img {*/
 /*    background-size:auto 50%;*/
 /*    height: 28vh;*/
 /*}*/
