--- a/src/layouts/MainLayout/index.css
+++ b/src/layouts/MainLayout/index.css
@@ -55,30 +55,25 @@ article {
   width: 25%;
   margin: 0 0 1em;
 }
-.wrapper {
+#posts-wrapper {
   padding: 25px 0;
   opacity: 0;
   transition: all 0.2s;
 }
-.wrapper.fade-in {
+#posts-wrapper.appear {
   opacity: 1;
+  transition: all 0.3s;
+}
+.sunk-short {
+  transform: translate(0, -10em);
+  animation: sunk-short 3s 0s ease-out forwards;
 }
 
 @keyframes sunk-short {
   0% {
-    opacity: 0;
     transform: translate(0, -1em);
   }
-  10% {
-    opacity: 0;
-  }
   100% {
-    opacity: 1;
     transform: translate(0, 0);
   }
-}
-.sunk-short {
-  opacity: 0;
-  transform: translate(0, -10em);
-  animation: sunk-short 3s 0.3s ease-out forwards;
 }
