--- a/src/layouts/MainLayout/TopBar.css
+++ b/src/layouts/MainLayout/TopBar.css
@@ -35,8 +35,9 @@
 .sunk {
   opacity: 0;
   transform: translate(0, -3em);
-  animation: sunk 3s 0.3s ease-out forwards,
-    drift 10s ease-in-out 3s infinite alternate;
+  animation: sunk 10s 0.3s ease-out forwards
+    /* ,
+    drift 10s ease-in-out 3s infinite alternate */;
 }
 
 @keyframes sunk {
@@ -58,7 +59,7 @@
     transform: translate(0, 0);
   }
   100% {
-    transform: translate(0, -1em);
+    transform: translate(0, 10px);
   }
 }
 header a {
