--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 ﻿@charset "UTF-8";
-
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap');
+/* 遅いのでダメ @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap'); */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
