--- a/src/stories/button.css
+++ b/src/stories/button.css
@@ -1,11 +1,11 @@
 .storybook-button {
-  display: inline-block;
   font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 700;
-  line-height: 1;
-  cursor: pointer;
   border: 0;
   border-radius: 3em;
+  cursor: pointer;
+  display: inline-block;
+  line-height: 1;
 }
 .storybook-button--primary {
   color: white;
@@ -14,21 +14,17 @@
 .storybook-button--secondary {
   color: #333;
   background-color: transparent;
-  box-shadow: rgb(0 0 0 / 15%) 0 0 0 1px inset;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;
 }
 .storybook-button--small {
-  padding: 10px 16px;
   font-size: 12px;
+  padding: 10px 16px;
 }
 .storybook-button--medium {
-  padding: 11px 20px;
   font-size: 14px;
+  padding: 11px 20px;
 }
 .storybook-button--large {
-  padding: 12px 24px;
   font-size: 16px;
-}
-.storybook-button--x-large {
-  padding: 16px 28px;
-  font-size: 18px;
+  padding: 12px 24px;
 }
