--- a/src/components/molecules/TopBar.css
+++ b/src/components/molecules/TopBar.css
@@ -1,6 +1,6 @@
 ﻿@charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap'); */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
