--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 /* start */
 html {
-  height: 100%;
+  @apply h-full;
   text-size-adjust: 100%;
   /* scroll-behavior: smooth; */
   font-size: 1rem;
